# graphics-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Button.hpp  Canvas.hpp  ChoosenColor.hpp  ClickClient.hpp  ColorInput.hpp  Controller.hpp  DataModel.hpp  Focused.hpp  Hovered.hpp  Input.hpp  MainWindow.hpp  Palette.hpp  TextInput.hpp  Toolbar.hpp  Window.hpp  button.hpp  graphicsEditor.hpp  observer.hpp  utils.hpp  window.hpp
src/: Button.cpp  Canvas.cpp  ChoosenColor.cpp  ColorInput.cpp  Controller.cpp  DataModel.cpp  MainWindow.cpp  Palette.cpp  TextInput.cpp  Toolbar.cpp  Window.cpp  button.cpp  graphicsEditor.cpp  main.cpp  observer.cpp  utils.cpp  window.cpp
src/Controller/: Controller.cpp  Controller.hpp
src/Interfaces/: Input.hpp  Observer.hpp  Tool.hpp  Window.hpp
src/Model/: DataModel.cpp  DataModel.hpp
src/Stack/: Stack.hpp
src/Tools/: CircleInstrument.cpp  CircleInstrument.hpp  ClearInstrument.cpp  ClearInstrument.hpp  ErraserInstrument.cpp  ErraserInstrument.hpp  FillerInstrument.cpp  FillerInstrument.hpp  ImageInstrument.cpp  ImageInstrument.hpp  LineInstrument.cpp  LineInstrument.hpp  OpenImageInstrument.cpp  OpenImageInstrument.hpp  PencilInstrument.cpp  PencilInstrument.hpp  PipetteInstrument.cpp  PipetteInstrument.hpp  RectInstrument.cpp  RectInstrument.hpp
src/View/: Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  ChoosenColor.cpp  ChoosenColor.hpp  ColorInput.cpp  ColorInput.hpp  Confirm.cpp  Confirm.hpp  MainWindow.cpp  MainWindow.hpp  Modal.cpp  Modal.hpp  Palette.cpp  Palette.hpp  Save.cpp  Save.hpp  TextInput.cpp  TextInput.hpp  Toolbar.cpp  Toolbar.hpp
src/main/: graphicsEditor.hpp  main.cpp  utils.cpp  utils.hpp
